# maram

./: .gitignore  .maram.toml  Cargo.toml  LICENSE  README.md
assets/: create_screenshots.sh
benches/: line_counting.rs  traversal.rs  walkdir_comparison.rs
src/: cli.rs  config.rs  error.rs  filters.rs  formatter.rs  lib.rs  main.rs  stats.rs  walker.rs
tests/: integration_test.rs
